--- a/style.css
+++ b/style.css
@@ -47,35 +47,35 @@ p2{
 
 .pattern-1 {
     position: absolute;
-    width: max-content;
+    width: 1000px;
     height: auto;
     left: 100vw;
 }
 
 .pattern-2 {
     position: absolute;
-    width: max-content;
+    width: 1000px;
     height: auto;
     left: 110vw;
 }
 
 .pattern-3 {
     position: absolute;
-    width: max-content;
+    width: 1500px;
     height: auto;
     left: 120vw;
 }
 
 .pattern-4 {
     position: absolute;
-    width: max-content;
+    width: 1700px;
     height: auto;
-    left: 140vw;
+    left: 150vw;
 }
 
 .pattern-5 {
     position: absolute;
-    width: max-content;
+    width: 1500px;
     height: auto;
     left: 160vw;
 }
