--- a/reset.css
+++ b/reset.css
@@ -25,10 +25,16 @@ ul {
 	list-style: none;
 }
 
-audio,
+
 img,
 video {
-	max-width: 100%;
+	/* max-width: 100%; */
+	height: 1000px;
+}
+
+audio {
+	/* max-width: 100%; */
+	height: 940px;
 }
 
 table {
