--- a/reset.css
+++ b/reset.css
@@ -1,3 +1,70 @@
+@media (min-width: 600px) {
+	html *:where(:not(audio, canvas, iframe, img, svg, video):not(svg *, symbol *)) {
+		all:     unset;
+		display: revert;
+	}
+	
+	html *,
+	html *::before,
+	html *::after {
+		box-sizing: border-box;
+	}
+	
+	a {
+		text-decoration: none;
+	}
+	
+	a,
+	button {
+		cursor: revert;
+	}
+	
+	details summary,
+	menu,
+	ol,
+	ul {
+		list-style: none;
+	}
+	
+	
+	img,
+	video {
+		/* max-width: 100%; */
+		height: 1000px;
+	}
+	
+	audio {
+		/* max-width: 100%; */
+		height: 940px;
+	}
+	
+	table {
+		border-collapse: collapse;
+	}
+	
+	textarea {
+		white-space: revert;
+	}
+	
+	::placeholder {
+		all: unset;
+	}
+	
+	iframe {
+		border: unset;
+	}
+	
+	
+	
+	/* Disclosure triangles. */
+	details ::marker,
+	details ::-webkit-details-marker {
+		display: none;
+	}
+	}
+
+
+@media (max-width: 600px) {
 html *:where(:not(audio, canvas, iframe, img, svg, video):not(svg *, symbol *)) {
 	all:     unset;
 	display: revert;
@@ -29,12 +96,12 @@ ul {
 img,
 video {
 	/* max-width: 100%; */
-	height: 1000px;
+	height: 940px;
 }
 
 audio {
 	/* max-width: 100%; */
-	height: 940px;
+	height: 800px;
 }
 
 table {
@@ -59,4 +126,5 @@ iframe {
 details ::marker,
 details ::-webkit-details-marker {
 	display: none;
+}
 }
